# LeanLayerCLI

./: .gitignore  Cargo.toml  README.md  airllm_backend.py  head_app.rs  requirements.txt
src/: config.rs
src/agent/: executor.rs  mcp.rs  mod.rs  tools.rs
src/backend/: mod.rs  process.rs  ratelimit.rs
src/memory/: graph.rs  summarize.rs
src/tui/: app.rs  layout.rs  mod.rs
