[package]
name = "airllm-rs"
version = "0.1.0"
edition = "2021"
description = "Terminal chat UI for AirLLM with Obsidian memory graph"
license = "Apache-2.0"
default-run = "airllm"

[[bin]]
name = "airllm"
path = "src/main.rs"



[dependencies]
# TUI
ratatui = "0.29.0"
crossterm = "0.27"
tui-textarea = "0.7.0"

# HTTP / Async
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.5"


# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Misc
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
textwrap = "0.16.2"
arboard = "3.6.1"

# Search
regex = "1"
walkdir = "2"
ignore = "0.4"

# Image / multimodal
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
tui-markdown = "0.3.7"
sysinfo = "0.39.5"
tiktoken-rs = "0.12.0"

